# itmo-masters-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  download_pdf.py  pyproject.toml
master_program_chatbot/: bot.py  qa.py  recommender.py
master_program_chatbot/data/: parser.py
tests/: test_bot.py  test_parser.py  test_qa.py  test_recommender.py
